--- a/action.yml
+++ b/action.yml
@@ -9,6 +9,8 @@ inputs:
   github_token:
     description: 'Github token to authenticate Octokit'
     required: true
+  rules_yaml:
+    description: 'Labels for which to add more reviews required for it.'
 branding:
   icon: 'user-check'  
   color: 'green'
