fix incorrect usage of yml

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@ updates:
     time: "04:00"
   open-pull-requests-limit: 10
   reviewers:
-  - namelivia
+  - BlueWeabo
   ignore:
   - dependency-name: "@octokit/rest"
     versions:
