java script is hell

--- a/action.yml
+++ b/action.yml
@@ -2,8 +2,8 @@ name: Label requires reviews - BlueWeabo Fork
 author: BlueWeabo <ilia.iliev2005@gmail.com> previous - TravelPerk <engineering@travelperk.com>
 description: This Github action will require a minimum number of reviews if a label is present.
 runs:
-  using: 'node16'
-  main: 'dist/index.js'
+  using: 'node21'
+  main: 'src/main.js'
 
 inputs:
   github_token:
