--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@octokit/endpoint": "^9.0.1",
     "@octokit/rest": "16.28.1",
     "@types/jest": "^29.5.5",
+    "@types/node": "^20.8.7",
     "babel-jest": "^29.7.0",
     "eslint": "^8.51.0",
     "husky": "^8.0.1",
